# Fenorama

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
src/: CMakeLists.txt  fenorama.h
src/gui/: CMakeLists.txt  fnGuiMain.cpp  fnGuiMain.h
src/parse/: CMakeLists.txt  fnPLayout.cpp  fnPLayout.h  fnParseMain.cpp  fnParseMain.h  fnParseTag.cpp  fnParseTag.h
src/util/: CMakeLists.txt  fnDefs.h  fnFilesystem.h
test/: CMakeLists.txt  main.cpp
